test php technique

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -25,3 +25,8 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+    app.author_articles_count:
+        class: App\Service\AuthorArticlesCountService
+        arguments:
+            - '@doctrine.orm.default_entity_manager'
+        public: false
